2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.053.

2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* Cairo.xs
	* t/Cairo.t: Wrap cairo_has_current_point.

2008-02-12  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.052.

2008-02-10  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.xs
	* t/Cairo.t: Wrap cairo_path_extents.

	* CairoSurface.xs
	* t/CairoSurface.t: Wrap cairo_format_stride_for_width.  Adapt to
	API changes: cairo_surface_copy_page and cairo_surface_show_page
	don't return cairo_status_t anymore.

	* CairoPath.xs: Fix the tied interface for paths on perl 5.6,
	whose magic support was slightly broken.  Also cleanup the tie
	code a bit.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.051.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* CairoSurface.xs
	* t/CairoSurface.t: Wrap cairo_surface_copy_page and
	cairo_surface_show_page.

	* Cairo.pm
	* Makefile.PL
	* CairoSurface.xs
	* t/CairoSurface.t: Wrap cairo_ps_surface_restrict_to_level,
	cairo_ps_get_levels, and cairo_ps_level_to_string.

	* Cairo.pm
	* CairoSurface.xs
	* t/CairoSurface.t: Wrap cairo_ps_surface_set_eps and
	cairo_ps_surface_get_eps.

2007-12-29  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.xs
	* CairoFont.xs
	* CairoMatrix.xs
	* CairoSurface.xs: Use perl's New*/Safefree facilities instead of
	calloc/malloc/free as the latter aren't safe on some platforms,
	notably Win32.  Patch by T.J. Ferraro.

	* t/CairoSurface.t: Mark the isa_ok test for PDF surfaces returned
	by create_similar() as TODO, since the returned surface's type is
	not reliable at this point.

2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.050.

2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm: Add entries for the various surfaces to the API
	listing.
